--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -20,3 +20,17 @@
     transition-duration: 300ms;
   }
 }
+
+.m-header {
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+      transform: translateY(-8px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+}
