--- a/user_dashboard/templates/hotspot/login1.html
+++ b/user_dashboard/templates/hotspot/login1.html
@@ -170,7 +170,7 @@
     <div class="manual-redirect">
         <form
                 action="{{ url }}"
-                method="get"
+                method="post"
                 name="redirect"
                 class="redirect-form"
         >
