--- a/frontend/src/pages/home-components/main.scss
+++ b/frontend/src/pages/home-components/main.scss
@@ -529,3 +529,49 @@
   padding: var(--offcanvas-padding-y) var(--offcanvas-padding-x);
   overflow-y: auto;
 }
+
+.su {
+  @keyframes blob {
+    0% {
+      transform: translate(0px, 0px) scale(1);
+    }
+    33% {
+      transform: translate(30px, -50px) scale(1.1);
+    }
+    66% {
+      transform: translate(-20px, 20px) scale(0.9);
+    }
+    100% {
+      transform: translate(0px, 0px) scale(1);
+    }
+  }
+
+  .animate-blob {
+    animation: blob 7s infinite;
+  }
+
+  .animation-delay-2000 {
+    animation-delay: 2s;
+  }
+
+  .animation-delay-4000 {
+    animation-delay: 4s;
+  }
+}
+
+.p-float {
+  @keyframes float {
+    0%, 100% {
+      transform: translate(0, 0);
+    }
+    25% {
+      transform: translate(20px, 30px);
+    }
+    50% {
+      transform: translate(-20px, 60px);
+    }
+    75% {
+      transform: translate(30px, 20px);
+    }
+  }
+}
