--- a/user_dashboard/templates/hotspot/login1.html
+++ b/user_dashboard/templates/hotspot/login1.html
@@ -175,7 +175,7 @@
                 class="redirect-form"
         >
             <input name="ip" type="hidden" value="$(ip)"/>
-            <input name="router" type="hidden" value="11859"/>
+            <input name="router" type="hidden" value="{{router}}"/>
         </form>
     </div>
 </div>
